# mkt-mmc

./: README.md  app.py  config.py
mikrotik-msc/: .gitattributes  LICENSE  README.md  cai_dat_va_cai_thien.md  install.sh  installation_guide.md  mikrotik_backup_manager.py  mikrotik_capsman_manager.py  mikrotik_chart_monitor.py  mikrotik_client_monitor.py  mikrotik_db_analyzer.py  mikrotik_firewall_manager.py  mikrotik_integrated_web.py  mikrotik_multi_interface_monitor.py  mikrotik_site_manager.py  mikrotik_traffic_logger.py  mikrotik_vpn_manager.py  mikrotik_web_monitor.py  package.sh  pyproject.toml  requirements.txt
mikrotik-msc/NetworkMasterControl/: cms-core_README.md  docker-compose.yaml  gitignore.txt  requirements.txt
mikrotik-msc/NetworkMasterControl/app/api/: capsman_api.py  mikrotik_api.py
mikrotik-msc/NetworkMasterControl/app/auth/: jwt_handler.py  ldap_auth.py  middleware.py  rbac.py  security.py
mikrotik-msc/NetworkMasterControl/app/database/: alembic.ini  crud.py  models.py
mikrotik-msc/NetworkMasterControl/app/ml/: anomaly_detector.py  data_collector.py
mikrotik-msc/NetworkMasterControl/app/schemas/: client.py  ip.py
mikrotik-msc/NetworkMasterControl/app/server/: routes.ts  storage.ts
mikrotik-msc/NetworkMasterControl/app/shared/: schema.ts
mikrotik-msc/NetworkMasterControl/app/smnp/: alerts.py  (+1 more)
mikrotik-msc/NetworkMasterControl/config/: settings.yaml
mikrotik-msc/NetworkMasterControl/scripts/: auto_provision.py  backup_configs.py  capsman_provision.py
mikrotik-msc/static/: script.js  style.css
mikrotik-msc/templates/: report.html
(+59 files in other folders)
